k8s/apps/esphome/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: esphome
  labels:
    name: esphome
    pod-security.kubernetes.io/enforce: privileged
