k8s/apps/esphome/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: esphome
    app.kubernetes.io/name: esphome
  name: esphome
  namespace: esphome
spec:
  ports:
    - name: http
      port: 6052
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: esphome
    app.kubernetes.io/name: esphome
  type: ClusterIP
