k8s/apps/esphome/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome
  labels:
    app: esphome
  annotations:
    nginx.org/websocket-services: esphome
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: ESP Home
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: SmartHome
    gethomepage.dev/icon: esphome
    gethomepage.dev/name: esphome
    gethomepage.dev/weight: "10" # put it at the end of the list
    uptimekuma.io/monitor: "true"
    uptimekuma.io/name: "esphome"
    uptimekuma.io/type: "http"
    uptimekuma.io/interval: "120"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - esphome.herrington.services
      secretName: esphome-tls-cert
  rules:
    - host: esphome.herrington.services
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: esphome
                port:
                  number: 6052
